--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -39,16 +39,19 @@
   color: white;
 }
 
-.ant-picker-input > input {
+.ant-picker-input > input  {
     color: white;
+}
+
+.date-picker-black > .ant-picker-input > input  {
+    color: black;
 }
 
 .ant-radio-inner {
   width: 40px;
   height: 40px;
-
-  
 }
+
 .ant-radio-inner::after {
   width: 20px;
   height: 20px;
