pagination / disallowed users options

--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -97,3 +97,27 @@ h1, h2, h3, h4, h5, h6 {
 .ant-collapse-header:hover {
     background-color: #192c3e;
 }
+
+.ant-pagination-item {
+    background-color: #001529;
+    color: white;
+}
+
+.ant-pagination-item a {
+    color: white;
+}
+
+.ant-pagination-prev {
+    background-color: #001529;
+    color: white;
+}
+.ant-pagination-prev .ant-pagination-item-link, .ant-pagination-next .ant-pagination-item-link {
+    background-color: #001529;
+    color: white;
+}
+
+.ant-pagination-jump-prev .ant-pagination-item-container .ant-pagination-item-ellipsis, .ant-pagination-jump-next .ant-pagination-item-container .ant-pagination-item-ellipsis
+{
+    background-color: #001529;
+    color: white;
+}
