--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -57,18 +57,6 @@
   height: 20px;
 }
 
-.ant-checkbox-inner {
-  width: 40px;
-  height: 40px;
-}
-.ant-checkbox-inner::after {
-  width: 8px;
-  height: 20px;
-}
-.ant-radio,
-.ant-checkbox {
-  font-size: 40px;
-}
 
 .ant-switch {
   background-color: grey;
@@ -76,6 +64,10 @@
 
 .ant-switch-checked {
     background-color: #1890ff;
+}
+
+.ant-checkbox-wrapper {
+    align-items: center;
 }
 
 .ant-modal-content {
@@ -195,4 +187,8 @@
 
 .custom-html-style {
     color: white !important;
+}
+
+.ant-collapse-expand-icon {
+    align-self: center;
 }
