--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #001529;
 }
 
 code {
@@ -71,6 +72,10 @@ code {
     cursor: pointer;
   }
 
+  .navbar-collapsed {
+    overflow: auto;
+  }
+
   
      @media (max-width: 920px) { 
         .navbar-expanded {
@@ -81,6 +86,7 @@ code {
     @media (max-width: 550px) { 
         .navbar-super-collapsed {
             display: none !important;
+            
            
         }
 
@@ -93,6 +99,7 @@ code {
     @media (min-width: 920px) { 
         .navbar-collapsed {
             display: none !important;
+            
         }
     }
   
@@ -275,4 +282,22 @@ transform: scale(1.01);
       align-items: center;
       justify-content: space-between;
       flex-direction: row;
+  }
+
+  .container {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
   }
