--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -196,8 +196,10 @@
 .ant-tooltip-disabled-compatible-wrapper {
     display: flex !important;
 }
-
-.web3modal-modal-lightbox { z-index: 2000 !important; }
+/* 
+#w3m-modal { 
+    z-index: 2000 !important; 
+} */
 
 .infinite-scroll-component__outerdiv {
     width: 100%
@@ -208,6 +210,38 @@
     margin-right: 4px !important;
 }
 
+.ant-modal-mask {
+    z-index: 80;
+}
+
+.ant-modal-wrap {
+    z-index: 80;
+}
+
 .ant-popover-placement-bottom, .ant-popover-placement-bottomLeft, .ant-popover-placement-bottomRight {
     width: 100%;
+}
+
+.blockin-popup-container {
+    max-width: 80vw !important;
+    margin: 0 !important;
+    max-height: 80vh !important;
+}
+
+.blockin-popup {
+    max-height: 75vh !important;
+}
+
+
+.blockin-root {
+    display: flex !important;
+    justify-content: center !important;
+    height: 100vh !important;
+    width: 100vw !important;
+    align-items: center !important;
+    padding: 0 !important;
+    /* max-height: 80vh !important; */
+    /* max-width: fit-content !important; */
+    min-width: 0 !important;
+    min-height: 0 !important;
 }
