--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -284,18 +284,29 @@ transform: scale(1.01);
 }
 
 .flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+  
+.flex-between {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: row;
-  }
-  
-  .flex-between {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-direction: row;
-  }
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-around {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
 
   .container {
     position: relative;
