--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -273,3 +273,8 @@
 .ant-table-cell-row-hover {
   background-color: black !important;
 } */
+
+.ant-dropdown-menu-item:hover, .ant-dropdown-menu-submenu-title:hover, .ant-dropdown-menu-item.ant-dropdown-menu-item-active, .ant-dropdown-menu-item.ant-dropdown-menu-submenu-title-active, .ant-dropdown-menu-submenu-title.ant-dropdown-menu-item-active, .ant-dropdown-menu-submenu-title.ant-dropdown-menu-submenu-title-active
+{
+    background-color: initial;
+}
