--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,8 +7,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter-SemiBold", sans-serif;
 }
 
 a {
@@ -329,4 +328,17 @@ p {
 
 .badge-avatar:hover {
     transform: scale(1.1);
+}
+
+.collect-title {
+  color: #FFF;
+  font-feature-settings: 'clig' off, 'liga' off;
+  
+  /* Heading/01 */
+  font-family: Inter;
+  font-size: 84px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 89px; /* 105.952% */
+  letter-spacing: -3.5px;
 }
