--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -188,13 +188,13 @@ code {
   .styled-button {
       background: #001529 !important;
       /* transition: background 0.3s, border-color 0.3s, color 0.3s; */
-      border: 1px solid white;
+      border: 2px solid white;
       color: white;
   }
 
   .styled-button:hover {
     color: #1890ff;
-    border: 1px solid #1890ff;
+    border: 2px solid #1890ff;
     background: initial;
 }
 
@@ -209,6 +209,19 @@ code {
   color: #1890ff;
   border: 1px solid #1890ff;
   background: initial;
+}
+
+.styled-button-blue {
+  background: white;
+  /* transition: background 0.3s, border-color 0.3s, color 0.3s; */
+  border: 1px solid black;
+  color: white;
+}
+
+.styled-button-blue:hover {
+color: #1890ff;
+border: 1px solid #1890ff;
+background: white;
 }
 
 .styled-button-modal {
@@ -416,3 +429,67 @@ transform: scale(1.01);
     width: 100%;
     height: 100%;
   }
+
+
+.collect-title {
+  color: #FFF;
+  font-feature-settings: 'clig' off, 'liga' off;
+  
+  /* Heading/01 */
+  font-family: "Inter-SemiBold", Helvetica;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 89px; /* 105.952% */
+  letter-spacing: -3.5px;
+}
+
+.flex-center-if-mobile {
+  @media (max-width: 920px) { 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+}
+
+
+.landing-button {
+  margin-left: 10px;
+  margin-right: 10px;
+  display: flex;
+  width: 146px;
+  padding: 14px 28px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 39px;
+  background: #1890ff;
+  cursor: pointer;
+  color: white;
+  font-weight: bold;
+  opacity: 0.9;
+  display: flex;
+  align-items: center;
+  margin: 10px;
+}
+
+.landing-button:hover {
+  border: 1px solid black;
+  opacity: 1;
+}
+
+.landing-logo {
+  max-height: 100%;
+  width: auto;
+  max-width: 400px;
+
+  @media (max-width: 920px) { 
+    max-width: 300px;
+    margin: 30px;
+  }
+}
+
+
+.tool-icon {
+}
