--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,6 +66,10 @@ code {
 }
 
 .primary-text  {
+    color: black;
+}
+
+.dark .primary-text {
     color: white;
 }
 
@@ -74,6 +78,10 @@ code {
 }
 
 .gradient-bg {
+    @apply bg-slate-100;
+}
+
+.dark .gradient-bg {
     background: linear-gradient(0deg, black 10%, #001529 100%);
 }
 
