--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -270,6 +270,10 @@ h1, h2, h3, h4, h5, h6 {
   text-align: left !important;
   color: white !important;
 }
+.custom-html-style {  
+  margin: 15px;
+  text-align: left !important;
+}
 
 .ant-collapse-expand-icon {
     align-self: center;
