ui; non-indexed; claim alerts by coll; compliance; half-completion standards timeline update, permission select

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -33,9 +33,9 @@ body {
     font-size: 30px;
 }
 
-.anticon-down svg{
+/* .anticon-down svg{
     color: var(--primary-color) !important;
-}
+} */
 
 
 /* 
