minor  UI fixes

--- a/src/styles/antd-override-styles.css
+++ b/src/styles/antd-override-styles.css
@@ -314,3 +314,12 @@
   color: transparent !important;
   border-color: transparent;
 }
+
+.ant-notification-notice {
+  @apply rounded-lg
+  
+}
+
+.ant-notification-notice-message {
+  font-weight: bold;
+}
