UI - markdown + syntax highlighting json

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -58,3 +58,8 @@ h1, h2, h3, h4, h5, h6 {
 .blockin-global .main-display{
     border: none;
 }
+
+/* overrides tailwind classes */
+ul {
+  list-style: disc;
+}
